--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "score-detail",
-  "version": "1.2.3",
+  "name": "hziee-score-detail",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "element-plus": "^2.3.7",
     "js-cookie": "^3.0.5",
+    "ua-parser-js": "^1.0.35",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
